# anki-cards

./: README.md  pyproject.toml  pytest.ini
examples/: default_anki_model.yaml  notes_deck.apkg
examples/knowledge/ml/: linear-regression.md
examples/knowledge/programing/python/: itertools.md
src/anki_cards/: cli.py  main.py  model.py  model_from_yaml.py
tests/: conftest.py  test_cli.py  test_integration.py  test_main.py  test_model.py  test_model_from_yaml.py
