[project]
name = "anki-cards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "JR", email = "romain.jouhameau@icebergdatalab.com" }]
requires-python = ">=3.13"
dependencies = [
  "genanki>=0.13.1",
  "pydantic>=2.11.3",
  "structlog>=25.2.0",
  "tyro>=0.9.19",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.12.0",
]

[project.scripts]
build-cards = "anki_cards.main:build_cards"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_cards"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
